Refactor after-sale and shopping cart domain models
Refactored after-sale order and shopping cart domain models to support multiple items per after-sale order, introduced AfterSaleItemReq/Resp and AfterSaleItemPO, and added reconstruct methods for domain objects. Updated assemblers and service interfaces to remove orderId from after-sale creation, and improved shopping cart with unique cart numbers and related generator. Adjusted infrastructure and API layers to align with new domain structure and improved persistence mapping.